# vendor-lookup-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  deploy-and-run.md  docker-compose.csharp.yml  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: vendor-lookup-rag-ci.yml
backend/csharp/: CODE_REVIEW.md  Dockerfile  README.md  VendorLookupRag.sln
backend/csharp/src/: VendorLookupRag.csproj
backend/csharp/src/Agents/: VendorLookupAgent.cs
backend/csharp/src/Composition/: AppOptionsFactory.cs  OllamaChatClientFactory.cs  ServiceCollectionExtensions.cs
backend/python/: README.md  pyproject.toml
backend/python/src/agent/: runner.py
backend/python/src/api/: deps.py
backend/python/src/csv/: mapping.py
backend/python/src/observability/: app_logging.py  logfire.py
backend/python/src/ports/: __init__.py
backend/python/src/retrieval/: __init__.py
backend/python/src/telemetry/: events.py
backend/python/src/vendor_lookup_rag/adapters/: __init__.py  factory.py
backend/python/src/vendor_lookup_rag/adapters/ollama/: __init__.py
backend/python/src/vendor_lookup_rag/adapters/qdrant/: vector_store.py
backend/python/src/vendor_lookup_rag/api/: __init__.py  __main__.py  routes.py  runtime.py
backend/python/src/vendor_lookup_rag/config/: __init__.py
backend/python/src/vendor_lookup_rag/csv/: __init__.py  loader.py
backend/python/src/vendor_lookup_rag/embedding/: __init__.py  ollama.py
backend/python/src/vendor_lookup_rag/health/: __init__.py  http.py
backend/python/src/vendor_lookup_rag/ingestion/: __init__.py
backend/python/src/vendor_lookup_rag/matching/: __init__.py  classify.py
backend/python/src/vendor_lookup_rag/models/: records.py
backend/python/src/vendor_lookup_rag/normalization/: __init__.py
backend/python/src/vendor_lookup_rag/ports/: vector_store.py
backend/python/src/vendor_lookup_rag/telemetry/: __init__.py
backend/python/src/vendor_lookup_rag/ui/: __init__.py
backend/python/tests/: conftest.py
backend/python/tests/agent/: test_runner.py
backend/python/tests/api/: test_api.py
backend/python/tests/config/: test_settings.py
backend/python/tests/csv/: test_loader.py
backend/python/tests/embedding/: test_ollama.py
backend/python/tests/fakes/: agent_runner.py
backend/python/tests/fixtures/: sample_vendors.csv  vendor_data_style.csv
backend/python/tests/ingestion/: test_pipeline.py  test_vendor_data_streaming.py
backend/python/tests/integration/: test_qdrant_optional.py
backend/python/tests/matching/: test_classify.py
backend/python/tests/package/: test_smoke.py
backend/python/tests/retrieval/: test_retrieval_integration.py  test_retrieve.py
backend/python/tests/ui/: test_api_client.py  test_app.py
docs/: adapter-switching.md  architecture.md  deploy-and-run.md  dev-stack.md  openapi.json  security-notes.md  test.mermaid  vendor_lookup_architecture.drawio
frontend/streamlit/: pyproject.toml
frontend/streamlit/src/vendor_lookup_streamlit/: __init__.py  api_client.py  app.py  settings.py
scripts/: install-ollama-macos.sh  install-ollama-windows.ps1  verify_stack.sh
specs/: README.md  vendor-lookup-agent-plan.md  vendor-lookup-agent-specifications.md
src/vendor_lookup_rag/: __init__.py  app.py
src/vendor_lookup_rag/agent/: __init__.py  deps.py  run_trace.py  runner.py
src/vendor_lookup_rag/api/: __init__.py  main.py  openapi.py  routes.py  schemas.py
src/vendor_lookup_rag/config/: settings.py
src/vendor_lookup_rag/ingestion/: cli.py  pipeline.py
src/vendor_lookup_rag/matching/: classify.py
src/vendor_lookup_rag/models/: __init__.py  records.py
src/vendor_lookup_rag/normalization/: text.py
src/vendor_lookup_rag/observability/: __init__.py
src/vendor_lookup_rag/ports/: agent_runner.py  embedding.py
src/vendor_lookup_rag/retrieval/: retrieve.py
src/vendor_lookup_rag/ui/: api_client.py  app.py  chat_display.py
src/vendor_lookup_rag/vector/: __init__.py  store.py
tests/: __init__.py  conftest.py
tests/adapters/: test_factory.py
tests/agent/: test_runner.py
tests/api/: __init__.py  test_api.py  test_openapi.py
tests/config/: test_settings.py
tests/fakes/: __init__.py  embedding.py  vector_store.py
tests/health/: test_http.py
tests/ingestion/: test_cli.py  test_pipeline.py
tests/matching/: test_classify.py
tests/normalization/: test_text.py
tests/observability/: test_app_logging.py
tests/ui/: test_api_client.py  test_app.py  test_chat_display.py
tests/vector/: test_store.py
(+45 files in other folders)
