[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vendor-lookup-rag"
version = "0.1.0"
description = "Vendor lookup against a vendor master list using RAG and a vector database"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Vendor Lookup RAG contributors" }]
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "pydantic-ai>=1.56.0",
    "qdrant-client>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "streamlit>=1.54.0",
]
observability = [
    "logfire>=2.0",
]

[project.scripts]
vendor-ingest = "vendor_lookup_rag.ingestion.cli:main"
vendor-api = "vendor_lookup_rag.api.__main__:main"
vendor-api-openapi = "vendor_lookup_rag.api.openapi:main"

[tool.setuptools]
# Flat layout under `src/`: import name remains `vendor_lookup_rag` via `package-dir` above.
# Keep in sync with subpackages that contain an `__init__.py` under `src/`.
package-dir = { "vendor_lookup_rag" = "src" }
packages = [
    "vendor_lookup_rag",
    "vendor_lookup_rag.adapters",
    "vendor_lookup_rag.adapters.ollama",
    "vendor_lookup_rag.adapters.pydantic_ai",
    "vendor_lookup_rag.adapters.qdrant",
    "vendor_lookup_rag.agent",
    "vendor_lookup_rag.api",
    "vendor_lookup_rag.config",
    "vendor_lookup_rag.csv",
    "vendor_lookup_rag.embedding",
    "vendor_lookup_rag.health",
    "vendor_lookup_rag.ingestion",
    "vendor_lookup_rag.matching",
    "vendor_lookup_rag.models",
    "vendor_lookup_rag.normalization",
    "vendor_lookup_rag.observability",
    "vendor_lookup_rag.ports",
    "vendor_lookup_rag.retrieval",
    "vendor_lookup_rag.telemetry",
    "vendor_lookup_rag.ui",
    "vendor_lookup_rag.vector",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../../frontend/streamlit/src"]
addopts = "-q --strict-markers -m 'not large_csv and not requires_ollama'"
markers = [
    "spec: link to a spec id or path (e.g. specs/vendor-lookup-agent-specifications.md#s4-version-discoverability)",
    "integration: requires external services (e.g. Qdrant, Ollama)",
    "requires_ollama: requires a running Ollama instance with models pulled",
    "large_csv: reads data/vendor-data.csv when present; slow multi-second run",
]

[tool.coverage.run]
source = ["src"]
