[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vendor-lookup-frontend"
version = "0.1.0"
description = "Streamlit chat client for the vendor lookup API"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.54.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vendor_lookup_streamlit"]
